fixed nifti saving, added saving of manual adjustment values to .pipe, small fixes, cleanup

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ wxpython
 suspect
 spec2nii
 matplotlib
-numpy<=1.23.5 # compatibility with suspect's import functions
+numpy<=1.23.5 # suspect compatibility (numpy types)
 antspyx
 gsnodegraph
 gswidgetkit
 pydicom
 pymapvbvd
+scikit-image
+scipy<=1.13.1 # mapvbvd compatibility (cumtrapz)
